# freemind-api

./: .gitignore  Cargo.toml  README.md
src/: data.rs  http_server.rs  main.rs  utils.rs
tests/documents/: invalid_1.xml  invalid_2.xml  invalid_3.xml  valid_1.xml  valid_2.xml
