[package]
name = "freemind-api"
authors = ["doncato <doncato@notarobot.cyou>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
chrono = "0.4"
confy = "0.5"
log = "0.4"
mysql = "23"
quick-xml = "0.27"
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"