[package]
name = "freemind-api"
authors = ["doncato <doncato@notarobot.cyou>"]
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
bcrypt = "0.14"
chrono = { version = "0.4", features = ["std"] }
confy = "0.5"
futures = "0.3"
log = "0.4"
mime = "0.3"
mysql = "23"
quick-xml = { version = "0.27", features = ["async-tokio"] }
serde = { version = "1.0", features = ["derive"] }
simplelog = "0.12"
tokio = { version = "1.25", features = ["fs", "rt", "macros"] }

[dev-dependencies]
test-log = "0.2"
env_logger = "0.10"